# kursovaya_3

./: README.md  pyproject.toml
kursovaya_3/: main.py  operations.json  utils.py
tests/: test_utils.py
